fix: Dark mode colors

--- a/globals.css
+++ b/globals.css
@@ -100,6 +100,10 @@ a {
 /*  }*/
 /*}*/
 
+:root {
+  color-scheme: light dark;
+}
+
 body {
   /*color: var(--text-color);*/
   /*background: var(--background);*/
